force-app/main/default/objects/Provider__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Details</relationshipLabel>
    <relationshipName>Provider_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>