force-app/main/default/objects/Provider__c/fields/Active_Provider__c.field-meta.xml
<CustomField>
    <fullName>Active_Provider__c</fullName>
    <label>Active Provider</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>