force-app/main/default/objects/Provider__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <label>Fleet Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>