force-app/main/default/objects/Provider__c/fields/Insurance_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Certificate_Number__c</fullName>
    <label>Insurance Certificate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>