force-app/main/default/objects/Provider__c/fields/Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiration_Date__c</fullName>
    <label>Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>