force-app/main/default/objects/Provider__c/fields/Minimum_Order_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Gallons__c</fullName>
    <label>Minimum Order (Gallons)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>